--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
+title: Gonzalo Iñaki Quintana's Homepage
+page-top-title: Gonzalo Iñaki Quintana
+top-section-bg-text: AI Researcher
 home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+copyright-text: '&copy; Gonzalo Iñaki Quintana 2024. All Rights Reserved.'
