--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Gonzalo Iñaki Quintana's Homepage
 page-top-title: Gonzalo Iñaki Quintana
 top-section-bg-text: AI Researcher
-home-subtitle: Sen Li&ensp;|&ensp;李森
+home-subtitle: Gonzalo Iñaki Quintana
 copyright-text: '&copy; Gonzalo Iñaki Quintana 2024. All Rights Reserved.'
